added more api
